Enable lazy stats activation

--- a/lib/output/no-stats/index.html
+++ b/lib/output/no-stats/index.html
@@ -631,11 +631,8 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwEyqo/B+CtGqPQAAAABJRU5ErkJggg==" />
   <article class="content">
     <h1 class="error-header">Dang! Looks like no stats are available.</h1>
 
-    <p>You have not enabled broccoli-concat stats generation. To enable them, run your ember-cli server like this:</p>
+    <p>I am sorry, but this should not have happened...</p>
 
-    <pre>
-      <code>CONCAT_STATS=true ember s</code>
-    </pre>
   </article>
 </main>
 </body>
