Catch errors during computation
Shows an error page, prints to console

Fixes #9

--- a/lib/output/no-stats/index.html
+++ b/lib/output/no-stats/index.html
@@ -631,7 +631,7 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwEyqo/B+CtGqPQAAAABJRU5ErkJggg==" />
   <article class="content">
     <h1 class="error-header">Dang! Looks like no stats are available.</h1>
 
-    <p>I am sorry, but this should not have happened...</p>
+    <p>I am sorry, but this should not have happened. Check the console output for an error message.</p>
 
   </article>
 </main>
